# learn-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  COURSE.md  INSTRUCTIONS.md  README.md  SOURCES.md  STARTER_SCOPE.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
assignments/bonus-cpp-warmup/: CMakeLists.txt  README.md
assignments/bonus-cpp-warmup/include/: starship_codex.hpp
assignments/bonus-cpp-warmup/src/: main.cpp  starship_codex.cpp
assignments/bonus-cpp-warmup/tests/: test_starship_codex.cpp
assignments/hw01-c-puzzle/: CMakeLists.txt  README.md
assignments/hw01-c-puzzle/include/: puzzle.h
assignments/hw01-c-puzzle/src/: puzzle.c
assignments/hw01-c-puzzle/tests/: test_puzzle.cpp
assignments/hw02-unix-runner/: CMakeLists.txt  README.md
assignments/hw02-unix-runner/include/: runner.h
assignments/hw02-unix-runner/src/: runner.c
assignments/hw02-unix-runner/tests/: test_runner.cpp
assignments/hw03-fuzzer-lite/: CMakeLists.txt  README.md
assignments/hw03-fuzzer-lite/include/: fuzzer_lite.h
assignments/hw03-fuzzer-lite/src/: fuzzer_lite.c
assignments/hw03-fuzzer-lite/tests/: test_fuzzer_lite.cpp
assignments/hw04-cpp-raii/: CMakeLists.txt  README.md
assignments/hw04-cpp-raii/include/: raii.hpp
assignments/hw04-cpp-raii/src/: raii.cpp
assignments/hw04-cpp-raii/tests/: test_raii.cpp
assignments/hw05-concurrent-server/: CMakeLists.txt  README.md
assignments/hw05-concurrent-server/include/: server_core.h
assignments/hw05-concurrent-server/python/: smoke_client.py
assignments/hw05-concurrent-server/src/: server_core.c
assignments/hw05-concurrent-server/tests/: test_server_core.cpp
capstones/c-fuzzlab/: CMakeLists.txt  DESIGN.md  README.md
capstones/c-fuzzlab/include/: fuzzlab.h
capstones/c-fuzzlab/python/: make_seeds.py  report.py  triage.py
capstones/c-fuzzlab/src/: campaign.c  fuzzlab.c  main.c  mutate.c  runner.c
capstones/c-fuzzlab/targets/: crashy.c
capstones/c-fuzzlab/tests/: test_fuzzlab.cpp
capstones/cpp-pulsekv/: CMakeLists.txt  DESIGN.md  README.md
capstones/cpp-pulsekv/include/: pulsekv.hpp
capstones/cpp-pulsekv/python/: client.py  load_test.py  report.py
capstones/cpp-pulsekv/src/: main.cpp  protocol.cpp  pulsekv.cpp  server.cpp  store.cpp
capstones/cpp-pulsekv/tests/: test_pulsekv.cpp
cmake/: TrainingWarnings.cmake
lessons/: 00-course-map.md  01-c-linux-tooling.md  02-c-memory.md  03-unix-processes-io-signals.md  04-performance-memory-and-fuzzing.md  05-modern-cpp-core.md  05b-cpp-warmup.md  06-cpp-raii-stl-templates.md  07-concurrency-networking.md  08-capstone-playbook.md
scripts/: test-all.sh
